# np_session

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: python-package.yml
src/np_session/: __init__.py  data_getters.py  exceptions.py  lims2.py  mtrain.py  np_session.py  paths.py  platform_json.py  projects.py  session.py  tasks.py  utils.py
src/np_session/components/: 1170788301_607186_20220414_platformD1.json  __init__.py  info.py  lims_manifests.py  mixins.py  paths.py  platform_json.py  settings_xml.py  state.py
src/np_session/databases/: __init__.py  data_getters.py  firebase.py  firebase_state.py  lims2.py  mtrain.py  redis.py  redis_state.py
src/np_session/jobs/: __init__.py  lims_upload.py  sync_states.py
src/np_session/subclasses/: __init__.py  dynamic_routing_pilot.py  pipeline.py  templeton_pilot.py
tests/: test_np_session.py  test_platform_json.py
