[tool.poetry]
name = "np-session"
version = "0.2.4"
description = "Tools for accessing data, metadata, and jobs related to ecephys and behavior sessions for the Mindscope Neuropixels team."
authors = ["Ben Hardcastle <ben.hardcastle@alleninstitute.org>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "np_session", from = "src"}]

[tool.poetry.urls]
"Repository" = "https://github.com/alleninstitute/np_session"
"Bug Tracker" = "https://github.com/alleninstitute/np_session/issues"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=4"
psycopg2-binary = "^2"
requests = "^2"
np_logging = ">=0.3.8"
"backports.cached-property" = "*"
redis = "^4.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "*"
types-requests = "*"
pip-tools = "*"
isort = "*"
black = "*"
pytest = "*"
coverage = {extras = ["toml"], version = "^7.1.0"}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    # "--pdb",
    # "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]

doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]

testpaths = [
    "tests",
    "src",
]


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["np_session"]

[tool.coverage.report]
show_missing = true