[project]
name = "np-session"
version = "0.5.4"
description = "Tools for accessing data, metadata, and jobs related to ecephys and behavior sessions for the Mindscope Neuropixels team."
authors = [
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "typing-extensions>=4",
    "psycopg2-binary>=2",
    "requests>=2",
    "np_logging>=0.3.8",
    "np_config>=0.4.17",
    "backports.cached-property",
    "firebase-admin>=6.1.0",
    "redis>=4.5.1",
    "pydantic>=1.10.5",
    "np-tools>=0.1.4",
]

[project.urls]
Repository = "https://github.com/alleninstitute/np_session"
"Bug Tracker" = "https://github.com/alleninstitute/np_session/issues"

[project.optional-dependencies]
dev = [
    "mypy>=0.910",
    "types-requests>=2",
    "pytest",
    "pytest-cov",
    "blue>=0.9.1",
    "coverage[toml]>=7.2.2",
    "pdm>=2.4.9",
    "bump>=1.3.2",
    "types-backports>=0.1.3",
    "ruff>=0.0.260",
]

[tool.pdm.scripts]
ruff = "ruff --fix src"
blue = "blue src"
pytest = "pytest --cov"
bump = "pdm bump patch"

[tool.pdm.scripts.prebuild]
composite = [
    "blue",
    "ruff",
    "pytest",
]

[tool.pdm.scripts.build]
composite = [
    "prebuild",
    "pdm build",
]

[tool.pdm.scripts.dry-run]
composite = [
    "prebuild",
    "pdm build",
    "pdm publish --no-build --repository https://test.pypi.org/simple",
]

[tool.pdm.scripts.pub]
composite = [
    "pdm bump patch",
    "pdm publish",
]

[tool.pdm.scripts.publish]
composite = [
    "pdm build",
    "pdm publish --no-build",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
testpaths = [
    "tests",
    "src",
]

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.run]
branch = true
source = [
    "np_session",
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = [
    "pdm-pep517>=1.0",
]
build-backend = "pdm.pep517.api"
