[project]
name = "np-session"
version = "0.6.0"
description = "Tools for accessing data, metadata, and jobs related to ecephys and behavior sessions for the Mindscope Neuropixels team."
authors = [
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "np_logging>=0.3.8",
    "np_config>=0.4.17",
    "np-tools>=0.1.6",
    "typing-extensions>=4",
    "psycopg2-binary>=2",
    "requests>=2",
    "backports.cached-property",
    "firebase-admin>=6.1.0",
    "pydantic>=1.10.5",
    "redis<=4.1.4", # redis>=4.1.4 adds async-timeout>=4.0: AllenSDK pins aiohttp ver with async-timeout < 4.0
]

[project.urls]
Repository = "https://github.com/alleninstitute/np_session"
"Bug Tracker" = "https://github.com/alleninstitute/np_session/issues"

[project.optional-dependencies]
dev = [
    "mypy>=0.910",
    "types-requests>=2",
    "pytest",
    "pytest-cov",
    "blue>=0.9.1",
    "coverage[toml]>=7.2.2",
    "pdm>=2.4.9",
    "bump>=1.3.2",
    "types-backports>=0.1.3",
    "ruff>=0.0.260",
]

[tool.pdm.scripts]
# usage: pdm run <script> [args]
ruff = "ruff check src --fix-only"
blue = "blue src"
pytest = "pytest --cov"
prebuild = {composite = ["blue", "ruff", "pytest"]}
bump = "bump -p pyproject.toml" # defaults to patch; `pdm run bump -m` to bump minor
build = {composite = ["prebuild", "pdm build"]}
dry-run = {composite = ["prebuild", "pdm build", "pdm publish --no-build --repository https://test.pypi.org/simple"]}
publish = {composite = ["prebuild", "pdm build", "pdm publish --no-build"]}
pub = {composite = ["bump", "pdm publish"]}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
testpaths = [
    "tests",
    "src",
]

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.run]
branch = true
source = [
    "np_session",
]

[tool.coverage.report]
show_missing = true

[tool.ruff]
ignore-init-module-imports = true

[build-system]
requires = [
    "pdm-pep517>=1.0",
]
build-backend = "pdm.pep517.api"
